--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,29 @@
-title: Hanlin Cai
-# tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
-# description: Two roads diverged in woods, I took the one less traveled by.
-#Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+title: Sheen's academic homepage
+# Comment out url when working locally to resolve base urls correctly
+url: https://sheensong.top/academic
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
+  avatar: touxiang2.jpg
+  name: Guanghui Song(宋广辉)
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
-  cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
+  description: His English name is sheen, and he is a PhD student at Hunan University, focusing on advanced compilation and high-performance computing.
+  # email: sheensong@163.com
+  email: sheensong@hnu.edu.cn
+  scholar: https://scholar.google.com/citations?user=J0M1TAQAAAAJ
+  researchgate: https://www.researchgate.net/profile/Guang-Song-9
+  zhihu: https://www.zhihu.com/people/sheen-66-52
+  cv: /file/CV.pdf
+  github: sheenisme
+
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  bilibili: 594030035
-  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  zhihu: https://www.zhihu.com/people/chlire
+  # twitter: lancecai2002
+  # linkedin: hanlincai
   # facebook: caihanlin2002
   # instagram: lancecai2002
-  # lastfm:
-  # tumblr:
+  # bilibili: 594030035
+  # lastfm: 1
+  # tumblr: 2
   # For Google Authorship https://plus.google.com/authorship
   # google_plus:
 
@@ -42,12 +43,12 @@ links:
     url: /publications/
   - title: Awards
     url: /awards/
-  - title: Hobbies
-    url: /hobbies/
-  - title: Blogs
-    url: /blogs/
-  - title: Teams
-    url: /teams/
+  # - title: Hobbies
+  #   url: /hobbies/
+  # - title: Blogs
+  #   url: /blogs/
+  # - title: Teams
+  #   url: /teams/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
