--- a/_config.yml
+++ b/_config.yml
@@ -85,4 +85,6 @@ disqus:
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
 
+
+# Latest update in 2024/08/24 by Sheen Song.
 # Latest update in 2023/12/10 by Hanlin Cai.
