--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ links:
     url: /awards/
   - title: CV
     url: /cv/
-  - title: Others
-    url: /others/
+  - title: Links
+    url: /links/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
