update url in config.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Sheen's academic homepage
 # Comment out url when working locally to resolve base urls correctly
-url: https://sheensong.top/academic
+url: https://academic.sheensong.top
 
 # Owner/author information
 owner:
